--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -65,6 +65,9 @@ body {
   background-color: #8f0d0d;
   background-size: cover;
 }
+footer{
+  opacity: 75%;
+}
 
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
